[gd_scene load_steps=13 format=3 uid="uid://dlhvong5jvcyw"]

[ext_resource type="Script" path="res://content/teleradio/devkit/TeleradioVirtualStick.gd" id="1_dtogo"]
[ext_resource type="Script" path="res://content/teleradio/devkit/TdkHitButton.gd" id="1_nr0cx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c5kvw"]
bg_color = Color(0.105469, 0.105469, 0.105469, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2l4s"]
bg_color = Color(0.0429688, 0.0429688, 0.0429688, 1)
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3mxs7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6ulm"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vw83b"]
bg_color = Color(0.863281, 0.863281, 0.863281, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rouvq"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ifv8o"]
bg_color = Color(0.609375, 0.609375, 0.609375, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_23ykk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ss1l7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2nbj"]
bg_color = Color(0.609375, 0.609375, 0.609375, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="Joystick" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -800.0
offset_bottom = -330.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c5kvw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 2

[node name="Stick" type="Control" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
script = ExtResource("1_dtogo")

[node name="Axis" type="Panel" parent="VBoxContainer/CenterContainer/Stick"]
custom_minimum_size = Vector2(92, 92)
layout_mode = 2
offset_left = -46.0
offset_top = -46.0
offset_right = 46.0
offset_bottom = 46.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y2l4s")

[node name="ButtonStick" type="Button" parent="VBoxContainer/CenterContainer/Stick"]
modulate = Color(0.67, 0.67, 0.67, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_3mxs7")
theme_override_styles/hover = SubResource("StyleBoxFlat_s6ulm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vw83b")
theme_override_styles/normal = SubResource("StyleBoxFlat_vw83b")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="ButtonA" type="Button" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 0.239216, 0.184314, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_3mxs7")
theme_override_styles/hover = SubResource("StyleBoxFlat_rouvq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ifv8o")
theme_override_styles/normal = SubResource("StyleBoxFlat_vw83b")
text = "A"
script = ExtResource("1_nr0cx")

[node name="ButtonB" type="Button" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color(0.14902, 0.627451, 1, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_23ykk")
theme_override_styles/hover = SubResource("StyleBoxFlat_ss1l7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x2nbj")
theme_override_styles/normal = SubResource("StyleBoxFlat_vw83b")
text = "B"
script = ExtResource("1_nr0cx")

[connection signal="button_down" from="VBoxContainer/CenterContainer/Stick/ButtonStick" to="VBoxContainer/CenterContainer/Stick" method="_on_button_stick_button_down"]
[connection signal="button_up" from="VBoxContainer/CenterContainer/Stick/ButtonStick" to="VBoxContainer/CenterContainer/Stick" method="_on_button_stick_button_up"]
